# image-processing-kernels

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: cuda_check.h  greyscale.cuh  medianBlur.cuh  smSobel.cuh  sobel.cuh  threshold.cuh
kernels/: greyscale.cu  medianBlur.cu  smSobel.cu  sobel.cu  threshold.cu
